@@ -15,7 +15,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -78,22 +77,27 @@ public class AutocompleteUtils {
                         },
                         AutocompleteUtils.class.getSimpleName(),
                         "batchGetAutocompleteResults"))
-            .collect(Collectors.toList());
+            .toList();
     return CompletableFuture.allOf(autoCompletesFuture.toArray(new CompletableFuture[0]))
-        .thenApplyAsync(
-            (res) -> {
-              AutoCompleteMultipleResults result =
-                  new AutoCompleteMultipleResults(sanitizedQuery, new ArrayList<>());
-              List<AutoCompleteResultForEntity> suggestions =
-                  autoCompletesFuture.stream()
-                      .map(CompletableFuture::join)
-                      .filter(
-                          autoCompleteResultForEntity ->
-                              autoCompleteResultForEntity.getSuggestions() != null
-                                  && autoCompleteResultForEntity.getSuggestions().size() > 0)
-                      .collect(Collectors.toList());
-              result.setSuggestions(suggestions);
-              return result;
-            });
+        .thenComposeAsync(
+            (res) ->
+                GraphQLConcurrencyUtils.supplyAsync(
+                    () -> {
+                      AutoCompleteMultipleResults result =
+                          new AutoCompleteMultipleResults(sanitizedQuery, new ArrayList<>());
+                      List<AutoCompleteResultForEntity> suggestions =
+                          autoCompletesFuture.stream()
+                              .map(CompletableFuture::join)
+                              .filter(
+                                  autoCompleteResultForEntity ->
+                                      autoCompleteResultForEntity.getSuggestions() != null
+                                          && autoCompleteResultForEntity.getSuggestions().size()
+                                              > 0)
+                              .toList();
+                      result.setSuggestions(suggestions);
+                      return result;
+                    },
+                    AutocompleteUtils.class.getSimpleName(),
+                    "joinAutocompleteResults"));
   }
 }
